--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
 <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap" rel="stylesheet">
 </head>
 
+<script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+    <df-messenger
+      intent="WELCOME"
+      chat-title="MyChat"
+      agent-id="61d20673-10db-4028-bd02-65d0a232b07a"
+      language-code="en"
+    ></df-messenger>
+
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
